Examples/test-suite/errors/napi_typescript_typemaps_mismatch1.i
%module napi_typescript_typemaps

// Mismatched merge strategies in arguments
%typemap(tsout, merge="object") int b "number";
%typemap(tsout, merge="array") int c "number";

void fn1(int a, int b, int c);
